# CineSync

./: .gitignore  README.md  docker-compose.yml
gateway/: nginx.conf
movie_service/: Dockerfile  pyproject.toml
movie_service/src/: config.py  main.py  observability.py  schemas.py  service.py
notification_service/: Dockerfile  pyproject.toml
notification_service/src/: main.py  observability.py
user_service/: Dockerfile  pyproject.toml
user_service/migrations/: env.py
user_service/src/: config.py  database.py  dependencies.py  events.py  main.py  models.py  schemas.py  security.py  service.py
