[tool.poetry]
name = "movie-service"
version = "0.1.0"
description = ""
authors = ["NiLNight <bkmz-2020@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
httpx = "^0.28.1"
redis = "^7.1.0"
pydantic-settings = "^2.12.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
